# assignment_2_packages

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/assignment_2_packages/: __init__.py
src/assignment_2_packages/data/: io.py  open_meteo.py
tests/: test_assignment_2_packages.py  test_io.py  test_open_meteo.py
