[tool.poetry]
name = "assignment_2_packages"
version = "0.1.0"
description = "A package for doing great things!"
authors = ["ManhTuan_Nguyen"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
scikit-learn = "1.5.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (==8.2.2)",
    "jupyterlab (==4.2.3)"
]
